--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyDIQiG6kkEysu1AzGHcMIvCwSXaJrv8hjE",
+  authDomain: "ficha-players.firebaseapp.com",
+  projectId: "ficha-players",
+  storageBucket: "ficha-players.appspot.com",
+  messagingSenderId: "762228941095",
+  appId: "1:762228941095:web:7f3872fb35434ae32ec902"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
